nova_tests/negative_capability/module_forbid_violation_setup/helper.nv
// Plan 42.10: второй peer (нужно ≥2 для folder-module detection).

module negative_capability.module_forbid_violation_setup

export fn helper() -> int =>
    1
